--- a/src/app/pages/includes/hd-integrations/hd-integrations.component.scss
+++ b/src/app/pages/includes/hd-integrations/hd-integrations.component.scss
@@ -1,4 +1,7 @@
 
+::ng-deep .plugWrapper .owl-carousel .owl-item img{ width: 174px; }
+
+
 :host ::ng-deep .owl-nav {
     display: block!important;
 }
